# compress

./: .gitignore  CMakeLists.txt  build.bash  run_test.bash  test  test.cpp
assets/: data.txt
scripts/: build.bash  run.bash  test.bash
src/: Atomic.cpp  Atomic.h  Buffer.cpp  Buffer.h  Compressor.cpp  Compressor.h  Encoder.cpp  Encoder.h  EncoderBuffer.cpp  EncoderBuffer.h  Utilities.cpp  Utilities.h  atomic.cpp  atomic.h  bitbuffer.cpp  bitbuffer.h  buffer.cpp  buffer.h  byte.h  compressor.cpp  compressor.h  main.cpp  main.h  utilities.cpp  utilities.h
src/compressors/: Compressors.h  HaffmanCompressor.cpp  HaffmanCompressor.h  PlainCompressor.cpp  PlainCompressor.h  arithmetic.cpp  arithmetic.h  arithmetic2.cpp  arithmetic2.h  bookstack.cpp  bookstack.h  bwt.cpp  bwt.h  compressors.h  haffman_compressor.cpp  haffman_compressor.h  huffman.cpp  huffman.h  huffman_compressor.h  huffman_decode.cpp  huffman_encode.cpp  lz77.cpp  lz77.h  plain.cpp  plain.h  plain_compressor.cpp  plain_compressor.h  rle.cpp  rle.h
src/encoders/: Encoders.h  HaffmanEncoder.cpp  HaffmanEncoder.h  PlainEncoder.cpp  PlainEncoder.h
